--- a/contrib/EL6/httpd/squidguardmgr.conf
+++ b/contrib/EL6/httpd/squidguardmgr.conf
@@ -268,7 +268,7 @@ AddLanguage sv .sv
 AddLanguage zh-CN .zh-cn
 AddLanguage zh-TW .zh-tw
 
-LanguagePriority ja en ca cs da de el eo es et fr he hr it ko ltz nl nn no pl pt pt-BR ru sv zh-CN zh-TW
+LanguagePriority en fr ja ca cs da de el eo es et he hr it ko ltz nl nn no pl pt pt-BR ru sv zh-CN zh-TW
 ForceLanguagePriority Prefer Fallback
 
 AddDefaultCharset Off
